--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "biolux",
+  "name": "vach_slider",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,20 +7,21 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.3",
-    "concurrently": "^9.1.2",
+    "axios": "^1.8.4",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "concurrently \"npx json-server db.json -p 8000\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run start\" \"npx json-server db.json -p 8000\""
   },
   "eslintConfig": {
     "extends": [
@@ -39,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^7.3.0"
   }
 }
